--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,10 @@ buildscript {
 
         setup = [
                 gradleTools: '7.3.0',
-                compileSdk : 33,
-                buildTools : "33.0.0",
+                compileSdk : 34,
+                buildTools : "34.0.0",
                 minSdk     : 16,
-                targetSdk  : 33
+                targetSdk  : 34
         ]
 
         versions = [
@@ -36,6 +36,15 @@ buildscript {
     }
 
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        mavenLocal()
+        mavenCentral()
+        google()
+        // jcenter()
+        maven { url "https://jitpack.io" }
+        mavenCentral(){url "https://jcenter.bintray.com/"}
         gradlePluginPortal()
         mavenCentral()
         google()
@@ -52,8 +61,15 @@ allprojects {
     group "com.mikepenz"
 
     repositories {
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        mavenLocal()
         mavenCentral()
         google()
+        //jcenter()
+        maven { url "https://jitpack.io" }
+        mavenCentral(){url "https://jcenter.bintray.com/"}
     }
 }
 
